workspace/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> DeclList                                (1)
	DeclList -> Decl DeclList                          (2)
	DeclList ->                                        (3)
	Decl -> FuncDecl                                   (4)
	Decl -> StructDecl                                 (5)
	Decl -> VarDecl                                    (6)
	FuncDecl -> ForallOpt Func Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block   (7)
	ForallOpt -> Forall Identifier Identifier Dot      (8)
	ForallOpt ->                                       (9)
	RetTypeOpt -> TypeDef Type                         (10)
	RetTypeOpt ->                                      (11)
	ParamsOpt -> Params                                (12)
	ParamsOpt ->                                       (13)
	Params -> Param                                    (14)
	Params -> Param Comma Params                       (15)
	Param -> Identifier ParamTypeOpt                   (16)
	ParamTypeOpt -> TypeDef Type                       (17)
	ParamTypeOpt ->                                    (18)
	StructDecl -> Struct Identifier LBrace Fields RBrace   (19)
	Fields -> Field Fields                             (20)
	Fields ->                                          (21)
	Field -> Identifier TypeDef Type Semicolon         (22)
	VarDecl -> Let Identifier TypeDef Type InitOpt Semicolon   (23)
	VarDecl -> Let Identifier Assign Expr Semicolon    (24)
	InitOpt -> Assign Expr                             (25)
	InitOpt ->                                         (26)
	Block -> LBrace Stmts RBrace                       (27)
	Stmts -> Stmt Stmts                                (28)
	Stmts ->                                           (29)
	Stmt -> VarDecl                                    (30)
	Stmt -> LValue Assign Expr Semicolon               (31)
	Stmt -> If LParenthesis Expr RParenthesis Block ElseOpt   (32)
	Stmt -> While LParenthesis Expr RParenthesis Block   (33)
	Stmt -> For LParenthesis ForInitOpt Semicolon Expr Semicolon ForUpdate RParenthesis Block   (34)
	Stmt -> Return ReturnOpt Semicolon                 (35)
	Stmt -> Expr Semicolon                             (36)
	Stmt -> LValue Inc Semicolon                       (37)
	ForUpdate -> LValue Inc                            (38)
	ForUpdate -> Expr                                  (39)
	ElseOpt -> Else Block                              (40)
	ElseOpt ->                                         (41)
	ForInitOpt -> LValue Assign Expr                   (42)
	ForInitOpt ->                                      (43)
	ReturnOpt -> Expr                                  (44)
	ReturnOpt ->                                       (45)
	Expr -> Expr Or AndExpr                            (46)
	Expr -> AndExpr                                    (47)
	AndExpr -> AndExpr And RelExpr                     (48)
	AndExpr -> RelExpr                                 (49)
	RelExpr -> RelExpr RelOp AddExpr                   (50)
	RelExpr -> AddExpr                                 (51)
	RelOp -> Equal                                     (52)
	RelOp -> NotEqual                                  (53)
	RelOp -> Less                                      (54)
	RelOp -> Greater                                   (55)
	RelOp -> LessEqual                                 (56)
	RelOp -> GreaterEqual                              (57)
	AddExpr -> AddExpr Plus Term                       (58)
	AddExpr -> AddExpr Minus Term                      (59)
	AddExpr -> Term                                    (60)
	Term -> Term Multiply Primary                      (61)
	Term -> Term Divide Primary                        (62)
	Term -> Primary                                    (63)
	Primary -> LParenthesis Expr RParenthesis          (64)
	Primary -> Identifier LParenthesis ArgsOpt RParenthesis   (65)
	Primary -> LValue                                  (66)
	Primary -> Literal                                 (67)
	Primary -> LBracket ArgsOpt RBracket               (68)
	Primary -> Identifier LBrace ArgsOpt RBrace        (69)
	Primary -> New BaseType LBracket NewSize RBracket   (70)
	NewSize -> Expr                                    (71)
	ArgsOpt -> Args                                    (72)
	ArgsOpt ->                                         (73)
	Args -> Expr                                       (74)
	Args -> Expr Comma Args                            (75)
	LValue -> Identifier                               (76)
	LValue -> LValue Dot Identifier                    (77)
	LValue -> LValue LBracket Expr RBracket            (78)
	Literal -> ValueInt                                (79)
	Literal -> ValueFloat                              (80)
	Literal -> ValueBool                               (81)
	Literal -> ValueString                             (82)
	Type -> FuncType                                   (83)
	FuncType -> TypeBase Arrow Type                    (84)
	FuncType -> TypeBase                               (85)
	TypeBase -> BaseType                               (86)
	TypeBase -> TypeBase LBracket RBracket             (87)
	TypeBase -> TypeBase LBracket ValueInt RBracket    (88)
	BaseType -> TypeInt                                (89)
	BaseType -> TypeFloat                              (90)
	BaseType -> TypeBool                               (91)
	BaseType -> TypeString                             (92)
	BaseType -> TypeVoid                               (93)
	BaseType -> Identifier                             (94)
	BaseType -> LParenthesis Type RParenthesis         (95)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	TypeInt        { TypeInt _ }
	TypeFloat      { TypeFloat _ }
	TypeBool       { TypeBool _ }
	TypeString     { TypeString _ }
	TypeVoid       { TypeVoid _ }
	Identifier     { Identifier _ $$ }
	ValueInt       { ValueInt _ $$ }
	ValueFloat     { ValueFloat _ $$ }
	ValueString    { ValueString _ $$ }
	ValueBool      { ValueBool _ $$ }
	Let            { Let _ }
	Return         { Return _ }
	While          { While _ }
	For            { For _ }
	If             { If _ }
	Else           { Else _ }
	Func           { Func _ }
	Struct         { Struct _ }
	New            { New _ }
	Forall         { Forall _ }
	Plus           { Plus _ }
	Minus          { Minus _ }
	Multiply       { Multiply _ }
	Divide         { Divide _ }
	Assign         { Assign _ }
	Equal          { Equal _ }
	NotEqual       { NotEqual _ }
	Less           { Less _ }
	Greater        { Greater _ }
	LessEqual      { LessEqual _ }
	GreaterEqual   { GreaterEqual _ }
	And            { And _ }
	Or             { Or _ }
	Inc            { Inc _ }
	Comma          { Comma _ }
	Semicolon      { Semicolon _ }
	Dot            { Dot _ }
	LParenthesis   { LParenthesis _ }
	RParenthesis   { RParenthesis _ }
	LBrace         { LBrace _ }
	RBrace         { RBrace _ }
	LBracket       { LBracket _ }
	RBracket       { RBracket _ }
	TypeDef        { TypeDef _ }
	Arrow          { Arrow _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	DeclList        rules 2, 3
	Decl            rules 4, 5, 6
	FuncDecl        rule  7
	ForallOpt       rules 8, 9
	RetTypeOpt      rules 10, 11
	ParamsOpt       rules 12, 13
	Params          rules 14, 15
	Param           rule  16
	ParamTypeOpt    rules 17, 18
	StructDecl      rule  19
	Fields          rules 20, 21
	Field           rule  22
	VarDecl         rules 23, 24
	InitOpt         rules 25, 26
	Block           rule  27
	Stmts           rules 28, 29
	Stmt            rules 30, 31, 32, 33, 34, 35, 36, 37
	ForUpdate       rules 38, 39
	ElseOpt         rules 40, 41
	ForInitOpt      rules 42, 43
	ReturnOpt       rules 44, 45
	Expr            rules 46, 47
	AndExpr         rules 48, 49
	RelExpr         rules 50, 51
	RelOp           rules 52, 53, 54, 55, 56, 57
	AddExpr         rules 58, 59, 60
	Term            rules 61, 62, 63
	Primary         rules 64, 65, 66, 67, 68, 69, 70
	NewSize         rule  71
	ArgsOpt         rules 72, 73
	Args            rules 74, 75
	LValue          rules 76, 77, 78
	Literal         rules 79, 80, 81, 82
	Type            rule  83
	FuncType        rules 84, 85
	TypeBase        rules 86, 87, 88
	BaseType        rules 89, 90, 91, 92, 93, 94, 95

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProgram -> . Program                    (rule 0)

	Let            shift, and enter state 8
	Func           reduce using rule 9
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10
	%eof           reduce using rule 3

	Program        goto state 11
	DeclList       goto state 2
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 1

	Program -> . DeclList                               (rule 1)

	Let            shift, and enter state 8
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10

	DeclList       goto state 2
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 2

	Program -> DeclList .                               (rule 1)

	%eof           reduce using rule 1


State 3

	DeclList -> Decl . DeclList                         (rule 2)

	Let            shift, and enter state 8
	Func           reduce using rule 9
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10
	%eof           reduce using rule 3

	DeclList       goto state 16
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 4

	Decl -> FuncDecl .                                  (rule 4)

	Let            reduce using rule 4
	Func           reduce using rule 4
	Struct         reduce using rule 4
	Forall         reduce using rule 4
	%eof           reduce using rule 4


State 5

	FuncDecl -> ForallOpt . Func Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	Func           shift, and enter state 15


State 6

	Decl -> StructDecl .                                (rule 5)

	Let            reduce using rule 5
	Func           reduce using rule 5
	Struct         reduce using rule 5
	Forall         reduce using rule 5
	%eof           reduce using rule 5


State 7

	Decl -> VarDecl .                                   (rule 6)

	Let            reduce using rule 6
	Func           reduce using rule 6
	Struct         reduce using rule 6
	Forall         reduce using rule 6
	%eof           reduce using rule 6


State 8

	VarDecl -> Let . Identifier TypeDef Type InitOpt Semicolon    (rule 23)
	VarDecl -> Let . Identifier Assign Expr Semicolon    (rule 24)

	Identifier     shift, and enter state 14


State 9

	StructDecl -> Struct . Identifier LBrace Fields RBrace    (rule 19)

	Identifier     shift, and enter state 13


State 10

	ForallOpt -> Forall . Identifier Identifier Dot     (rule 8)

	Identifier     shift, and enter state 12


State 11

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 12

	ForallOpt -> Forall Identifier . Identifier Dot     (rule 8)

	Identifier     shift, and enter state 21


State 13

	StructDecl -> Struct Identifier . LBrace Fields RBrace    (rule 19)

	LBrace         shift, and enter state 20


State 14

	VarDecl -> Let Identifier . TypeDef Type InitOpt Semicolon    (rule 23)
	VarDecl -> Let Identifier . Assign Expr Semicolon    (rule 24)

	Assign         shift, and enter state 18
	TypeDef        shift, and enter state 19


State 15

	FuncDecl -> ForallOpt Func . Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	Identifier     shift, and enter state 17


State 16

	DeclList -> Decl DeclList .                         (rule 2)

	%eof           reduce using rule 2


State 17

	FuncDecl -> ForallOpt Func Identifier . LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	LParenthesis   shift, and enter state 53


State 18

	VarDecl -> Let Identifier Assign . Expr Semicolon    (rule 24)

	Identifier     shift, and enter state 45
	ValueInt       shift, and enter state 46
	ValueFloat     shift, and enter state 47
	ValueString    shift, and enter state 48
	ValueBool      shift, and enter state 49
	New            shift, and enter state 50
	LParenthesis   shift, and enter state 51
	LBracket       shift, and enter state 52

	Expr           goto state 37
	AndExpr        goto state 38
	RelExpr        goto state 39
	AddExpr        goto state 40
	Term           goto state 41
	Primary        goto state 42
	LValue         goto state 43
	Literal        goto state 44

State 19

	VarDecl -> Let Identifier TypeDef . Type InitOpt Semicolon    (rule 23)

	TypeInt        shift, and enter state 30
	TypeFloat      shift, and enter state 31
	TypeBool       shift, and enter state 32
	TypeString     shift, and enter state 33
	TypeVoid       shift, and enter state 34
	Identifier     shift, and enter state 35
	LParenthesis   shift, and enter state 36

	Type           goto state 26
	FuncType       goto state 27
	TypeBase       goto state 28
	BaseType       goto state 29

State 20

	StructDecl -> Struct Identifier LBrace . Fields RBrace    (rule 19)

	Identifier     shift, and enter state 25
	RBrace         reduce using rule 21

	Fields         goto state 23
	Field          goto state 24

State 21

	ForallOpt -> Forall Identifier Identifier . Dot     (rule 8)

	Dot            shift, and enter state 22


State 22

	ForallOpt -> Forall Identifier Identifier Dot .     (rule 8)

	Func           reduce using rule 8


State 23

	StructDecl -> Struct Identifier LBrace Fields . RBrace    (rule 19)

	RBrace         shift, and enter state 88


State 24

	Fields -> Field . Fields                            (rule 20)

	Identifier     shift, and enter state 25
	RBrace         reduce using rule 21

	Fields         goto state 87
	Field          goto state 24

State 25

	Field -> Identifier . TypeDef Type Semicolon        (rule 22)

	TypeDef        shift, and enter state 86


State 26

	VarDecl -> Let Identifier TypeDef Type . InitOpt Semicolon    (rule 23)

	Assign         shift, and enter state 85
	Semicolon      reduce using rule 26

	InitOpt        goto state 84

State 27

	Type -> FuncType .                                  (rule 83)

	Assign         reduce using rule 83
	Comma          reduce using rule 83
	Semicolon      reduce using rule 83
	RParenthesis   reduce using rule 83
	LBrace         reduce using rule 83


State 28

	FuncType -> TypeBase . Arrow Type                   (rule 84)
	FuncType -> TypeBase .                              (rule 85)
	TypeBase -> TypeBase . LBracket RBracket            (rule 87)
	TypeBase -> TypeBase . LBracket ValueInt RBracket    (rule 88)

	Assign         reduce using rule 85
	Comma          reduce using rule 85
	Semicolon      reduce using rule 85
	RParenthesis   reduce using rule 85
	LBrace         reduce using rule 85
	LBracket       shift, and enter state 82
	Arrow          shift, and enter state 83


State 29

	TypeBase -> BaseType .                              (rule 86)

	Assign         reduce using rule 86
	Comma          reduce using rule 86
	Semicolon      reduce using rule 86
	RParenthesis   reduce using rule 86
	LBrace         reduce using rule 86
	LBracket       reduce using rule 86
	Arrow          reduce using rule 86


State 30

	BaseType -> TypeInt .                               (rule 89)

	Assign         reduce using rule 89
	Comma          reduce using rule 89
	Semicolon      reduce using rule 89
	RParenthesis   reduce using rule 89
	LBrace         reduce using rule 89
	LBracket       reduce using rule 89
	Arrow          reduce using rule 89


State 31

	BaseType -> TypeFloat .                             (rule 90)

	Assign         reduce using rule 90
	Comma          reduce using rule 90
	Semicolon      reduce using rule 90
	RParenthesis   reduce using rule 90
	LBrace         reduce using rule 90
	LBracket       reduce using rule 90
	Arrow          reduce using rule 90


State 32

	BaseType -> TypeBool .                              (rule 91)

	Assign         reduce using rule 91
	Comma          reduce using rule 91
	Semicolon      reduce using rule 91
	RParenthesis   reduce using rule 91
	LBrace         reduce using rule 91
	LBracket       reduce using rule 91
	Arrow          reduce using rule 91


State 33

	BaseType -> TypeString .                            (rule 92)

	Assign         reduce using rule 92
	Comma          reduce using rule 92
	Semicolon      reduce using rule 92
	RParenthesis   reduce using rule 92
	LBrace         reduce using rule 92
	LBracket       reduce using rule 92
	Arrow          reduce using rule 92


State 34

	BaseType -> TypeVoid .                              (rule 93)

	Assign         reduce using rule 93
	Comma          reduce using rule 93
	Semicolon      reduce using rule 93
	RParenthesis   reduce using rule 93
	LBrace         reduce using rule 93
	LBracket       reduce using rule 93
	Arrow          reduce using rule 93


State 35

	BaseType -> Identifier .                            (rule 94)

	Assign         reduce using rule 94
	Comma          reduce using rule 94
	Semicolon      reduce using rule 94
	RParenthesis   reduce using rule 94
	LBrace         reduce using rule 94
	LBracket       reduce using rule 94
	Arrow          reduce using rule 94


State 36

	BaseType -> LParenthesis . Type RParenthesis        (rule 95)

	TypeInt        shift, and enter state 30
	TypeFloat      shift, and enter state 31
	TypeBool       shift, and enter state 32
	TypeString     shift, and enter state 33
	TypeVoid       shift, and enter state 34
	Identifier     shift, and enter state 35
	LParenthesis   shift, and enter state 36

	Type           goto state 81
	FuncType       goto state 27
	TypeBase       goto state 28
	BaseType       goto state 29

State 37

	VarDecl -> Let Identifier Assign Expr . Semicolon    (rule 24)
	Expr -> Expr . Or AndExpr                           (rule 46)

	Or             shift, and enter state 79
	Semicolon      shift, and enter state 80


State 38

	Expr -> AndExpr .                                   (rule 47)
	AndExpr -> AndExpr . And RelExpr                    (rule 48)

	And            shift, and enter state 78
	Or             reduce using rule 47
	Comma          reduce using rule 47
	Semicolon      reduce using rule 47
	RParenthesis   reduce using rule 47
	RBrace         reduce using rule 47
	RBracket       reduce using rule 47


State 39

	AndExpr -> RelExpr .                                (rule 49)
	RelExpr -> RelExpr . RelOp AddExpr                  (rule 50)

	Equal          shift, and enter state 72
	NotEqual       shift, and enter state 73
	Less           shift, and enter state 74
	Greater        shift, and enter state 75
	LessEqual      shift, and enter state 76
	GreaterEqual   shift, and enter state 77
	And            reduce using rule 49
	Or             reduce using rule 49
	Comma          reduce using rule 49
	Semicolon      reduce using rule 49
	RParenthesis   reduce using rule 49
	RBrace         reduce using rule 49
	RBracket       reduce using rule 49

	RelOp          goto state 71

State 40

	RelExpr -> AddExpr .                                (rule 51)
	AddExpr -> AddExpr . Plus Term                      (rule 58)
	AddExpr -> AddExpr . Minus Term                     (rule 59)

	Plus           shift, and enter state 69
	Minus          shift, and enter state 70
	Equal          reduce using rule 51
	NotEqual       reduce using rule 51
	Less           reduce using rule 51
	Greater        reduce using rule 51
	LessEqual      reduce using rule 51
	GreaterEqual   reduce using rule 51
	And            reduce using rule 51
	Or             reduce using rule 51
	Comma          reduce using rule 51
	Semicolon      reduce using rule 51
	RParenthesis   reduce using rule 51
	RBrace         reduce using rule 51
	RBracket       reduce using rule 51


State 41

	AddExpr -> Term .                                   (rule 60)
	Term -> Term . Multiply Primary                     (rule 61)
	Term -> Term . Divide Primary                       (rule 62)

	Plus           reduce using rule 60
	Minus          reduce using rule 60
	Multiply       shift, and enter state 67
	Divide         shift, and enter state 68
	Equal          reduce using rule 60
	NotEqual       reduce using rule 60
	Less           reduce using rule 60
	Greater        reduce using rule 60
	LessEqual      reduce using rule 60
	GreaterEqual   reduce using rule 60
	And            reduce using rule 60
	Or             reduce using rule 60
	Comma          reduce using rule 60
	Semicolon      reduce using rule 60
	RParenthesis   reduce using rule 60
	RBrace         reduce using rule 60
	RBracket       reduce using rule 60


State 42

	Term -> Primary .                                   (rule 63)

	Plus           reduce using rule 63
	Minus          reduce using rule 63
	Multiply       reduce using rule 63
	Divide         reduce using rule 63
	Equal          reduce using rule 63
	NotEqual       reduce using rule 63
	Less           reduce using rule 63
	Greater        reduce using rule 63
	LessEqual      reduce using rule 63
	GreaterEqual   reduce using rule 63
	And            reduce using rule 63
	Or             reduce using rule 63
	Comma          reduce using rule 63
	Semicolon      reduce using rule 63
	RParenthesis   reduce using rule 63
	RBrace         reduce using rule 63
	RBracket       reduce using rule 63


State 43

	Primary -> LValue .                                 (rule 66)
	LValue -> LValue . Dot Identifier                   (rule 77)
	LValue -> LValue . LBracket Expr RBracket           (rule 78)

	Plus           reduce using rule 66
	Minus          reduce using rule 66
	Multiply       reduce using rule 66
	Divide         reduce using rule 66
	Equal          reduce using rule 66
	NotEqual       reduce using rule 66
	Less           reduce using rule 66
	Greater        reduce using rule 66
	LessEqual      reduce using rule 66
	GreaterEqual   reduce using rule 66
	And            reduce using rule 66
	Or             reduce using rule 66
	Comma          reduce using rule 66
	Semicolon      reduce using rule 66
	Dot            shift, and enter state 65
	RParenthesis   reduce using rule 66
	RBrace         reduce using rule 66
	LBracket       shift, and enter state 66
	RBracket       reduce using rule 66


State 44

	Primary -> Literal .                                (rule 67)

	Plus           reduce using rule 67
	Minus          reduce using rule 67
	Multiply       reduce using rule 67
	Divide         reduce using rule 67
	Equal          reduce using rule 67
	NotEqual       reduce using rule 67
	Less           reduce using rule 67
	Greater        reduce using rule 67
	LessEqual      reduce using rule 67
	GreaterEqual   reduce using rule 67
	And            reduce using rule 67
	Or             reduce using rule 67
	Comma          reduce using rule 67
	Semicolon      reduce using rule 67
	RParenthesis   reduce using rule 67
	RBrace         reduce using rule 67
	RBracket       reduce using rule 67


State 45

	Primary -> Identifier . LParenthesis ArgsOpt RParenthesis    (rule 65)
	Primary -> Identifier . LBrace ArgsOpt RBrace       (rule 69)
	LValue -> Identifier .                              (rule 76)

	Plus           reduce using rule 76
	Minus          reduce using rule 76
	Multiply       reduce using rule 76
	Divide         reduce using rule 76
	Assign         reduce using rule 76
	Equal          reduce using rule 76
	NotEqual       reduce using rule 76
	Less           reduce using rule 76
	Greater        reduce using rule 76
	LessEqual      reduce using rule 76
	GreaterEqual   reduce using rule 76
	And            reduce using rule 76
	Or             reduce using rule 76
	Inc            reduce using rule 76
	Comma          reduce using rule 76
	Semicolon      reduce using rule 76
	Dot            reduce using rule 76
	LParenthesis   shift, and enter state 63
	RParenthesis   reduce using rule 76
	LBrace         shift, and enter state 64
	RBrace         reduce using rule 76
	LBracket       reduce using rule 76
	RBracket       reduce using rule 76


State 46

	Literal -> ValueInt .                               (rule 79)

	Plus           reduce using rule 79
	Minus          reduce using rule 79
	Multiply       reduce using rule 79
	Divide         reduce using rule 79
	Equal          reduce using rule 79
	NotEqual       reduce using rule 79
	Less           reduce using rule 79
	Greater        reduce using rule 79
	LessEqual      reduce using rule 79
	GreaterEqual   reduce using rule 79
	And            reduce using rule 79
	Or             reduce using rule 79
	Comma          reduce using rule 79
	Semicolon      reduce using rule 79
	RParenthesis   reduce using rule 79
	RBrace         reduce using rule 79
	RBracket       reduce using rule 79


State 47

	Literal -> ValueFloat .                             (rule 80)

	Plus           reduce using rule 80
	Minus          reduce using rule 80
	Multiply       reduce using rule 80
	Divide         reduce using rule 80
	Equal          reduce using rule 80
	NotEqual       reduce using rule 80
	Less           reduce using rule 80
	Greater        reduce using rule 80
	LessEqual      reduce using rule 80
	GreaterEqual   reduce using rule 80
	And            reduce using rule 80
	Or             reduce using rule 80
	Comma          reduce using rule 80
	Semicolon      reduce using rule 80
	RParenthesis   reduce using rule 80
	RBrace         reduce using rule 80
	RBracket       reduce using rule 80


State 48

	Literal -> ValueString .                            (rule 82)

	Plus           reduce using rule 82
	Minus          reduce using rule 82
	Multiply       reduce using rule 82
	Divide         reduce using rule 82
	Equal          reduce using rule 82
	NotEqual       reduce using rule 82
	Less           reduce using rule 82
	Greater        reduce using rule 82
	LessEqual      reduce using rule 82
	GreaterEqual   reduce using rule 82
	And            reduce using rule 82
	Or             reduce using rule 82
	Comma          reduce using rule 82
	Semicolon      reduce using rule 82
	RParenthesis   reduce using rule 82
	RBrace         reduce using rule 82
	RBracket       reduce using rule 82


State 49

	Literal -> ValueBool .                              (rule 81)

	Plus           reduce using rule 81
	Minus          reduce using rule 81
	Multiply       reduce using rule 81
	Divide         reduce using rule 81
	Equal          reduce using rule 81
	NotEqual       reduce using rule 81
	Less           reduce using rule 81
	Greater        reduce using rule 81
	LessEqual      reduce using rule 81
	GreaterEqual   reduce using rule 81
	And            reduce using rule 81
	Or             reduce using rule 81
	Comma          reduce using rule 81
	Semicolon      reduce using rule 81
	RParenthesis   reduce using rule 81
	RBrace         reduce using rule 81
	RBracket       reduce using rule 81


State 50

	Primary -> New . BaseType LBracket NewSize RBracket    (rule 70)

	TypeInt        shift, and enter state 30
	TypeFloat      shift, and enter state 31
	TypeBool       shift, and enter state 32
	TypeString     shift, and enter state 33
	TypeVoid       shift, and enter state 34
	Identifier     shift, and enter state 35
	LParenthesis   shift, and enter state 36

	BaseType       goto state 62

State 51

	Primary -> LParenthesis . Expr RParenthesis         (rule 64)
